--- a/Hobbbies.html
+++ b/Hobbbies.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My Hobbies</title>
-    <link rel="stylesheet" href="Styles/Hobbies.css" />
+    <link rel="stylesheet" href="styles/Hobbies.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
